--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,7 @@
 			background: #111;
 			color: #ddd;
 			text-align: center;
+			font-family: Arial, Helvetica, sans-serif;
 		}
 		a {
 			color: #2c2cbb;
