make labels clickable

--- a/popup.html
+++ b/popup.html
@@ -127,14 +127,14 @@
 
 	<div class="hide-before-load flex" style="width: 90%;margin:7px auto;">
 		<div class="settings1">
-			<input id="letters" type="checkbox"> Lowercase letters
+			<input id="letters" type="checkbox"> <label for="letters">Lowercase letters</label>
 			<br>
-			<input id="letters_upper" type="checkbox"> Uppercase letters
+			<input id="letters_upper" type="checkbox"> <label for="letters_upper">Uppercase letters</label>
 		</div>
 		<div class="settings2">
-			Numbers <input id="numbers" type="checkbox">
+			<label for="numbers">Numbers</label> <input id="numbers" type="checkbox">
 			<br>
-			Symbols <input id="symbols" type="checkbox">
+			<label for="symbols">Symbols</label> <input id="symbols" type="checkbox">
 			<br>
 		</div>
 	</div>
